# adventofcode

./: .gitignore  .mise.toml  .sops.yaml  README.md  aoc.py  pyproject.toml
.hack/: day_n.py.j2  gen.py  test_day_n.py.j2
adventofcode/2023/: day10.py  day12.py  day14.py  day2.py  day4.py  day6.py  day7.py  test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
adventofcode/_2023/: day1.py  day11.py  day13.py  day15.py  day16.py  day3.py  day5.py  day8.py  day9.py
adventofcode/_2024/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
adventofcode/_2025/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
adventofcode/utils/: Puzzle.py  grid.py
inputs/2023/: day1.secret.txt  day10.secret.txt  day11.secret.txt  day12.secret.txt  day13.secret.txt  day14.secret.txt  day15.secret.txt  day16.secret.txt  day2.secret.txt  day3.secret.txt  day4.secret.txt  day5.secret.txt  day6.secret.txt  day7.secret.txt  day8.secret.txt  day9.secret.txt
inputs/2024/: day1.secret.txt  day2.secret.txt  day3.secret.txt  day4.secret.txt  day5.secret.txt  day6.secret.txt  day7.secret.txt
inputs/2025/: day1.secret.txt  day2.secret.txt  day3.secret.txt  day4.secret.txt  day5.secret.txt  day6.secret.txt  day7.secret.txt
tests/2023/: test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day2.py  test_day3.py  test_day4.py  (+5 more)
(+14 files in other folders)
