[project]
name = "adventofcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.4",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pytest>=8.3.3",
]

[tool.pytest]

[tool.ruff]
line-length = 100
indent-width = 2

[tool.ruff.format]
indent-style = "space"
